[package]
name = "vintage"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A multi-threaded FastCGI server"
repository = "https://github.com/eze-works/vintage"
categories = ["network-programming", "web-programming"]
keywords = ["fastcgi", "cgi"]

[dependencies]
bufstream = "0.1.4"
camino = "1.1.9"
convert_case = "0.6.0"
filetime = "0.2.25"
form_urlencoded = "1.2.1"
jiff = "0.1.13"
log = { version = "0.4.22", features = ["kv_std"] }
matchit = "0.8.4"
mio = { version = "1.0.2", features = ["os-ext", "net"] }
paste = "1.0.15"
thiserror = "1.0.63"
threadpool = "1.8.1"

[dev-dependencies]
assert_matches = "1.5.0"
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
